--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -100,93 +100,93 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="18.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
-                  <Label layoutX="50.0" layoutY="40.0" text="Username">
+                  <Label layoutX="47.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="370.0" layoutY="40.0" text="Birthday">
+                  <Label layoutX="370.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="50.0" layoutY="80.0" text="Password">
+                  <Label layoutX="48.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="50.0" layoutY="120.0" text="Firstname">
+                  <Label layoutX="46.0" layoutY="114.0" styleClass="font_rsu" stylesheets="@style/PrimaryTheme.css" text="Firstname">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="50.0" layoutY="160.0" text="Lastname">
+                  <Label layoutX="47.0" layoutY="154.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="370.0" layoutY="80.0" text="Phone">
+                  <Label layoutX="370.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="370.0" layoutY="120.0" text="Sex">
+                  <Label layoutX="370.0" layoutY="114.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Button layoutX="582.0" layoutY="161.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" text="แก้ไข" textFill="WHITE">
+                  <Button layoutX="582.0" layoutY="161.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Label fx:id="usernameLabel" layoutX="180.0" layoutY="40.0" text="Username">
+                  <Label fx:id="usernameLabel" layoutX="180.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="passwordLabel" layoutX="180.0" layoutY="80.0" text="Password">
+                  <Label fx:id="passwordLabel" layoutX="180.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="firstnameLabel" layoutX="180.0" layoutY="120.0" text="Firstname">
+                  <Label fx:id="firstnameLabel" layoutX="178.0" layoutY="116.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lastnameLAbel" layoutX="180.0" layoutY="160.0" text="Lastname">
+                  <Label fx:id="lastnameLAbel" layoutX="180.0" layoutY="154.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="birthdayLabel" layoutX="480.0" layoutY="40.0" text="Birthday">
+                  <Label fx:id="birthdayLabel" layoutX="480.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="phoneLabel" layoutX="480.0" layoutY="80.0" text="Phone">
+                  <Label fx:id="phoneLabel" layoutX="478.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label fx:id="sexLabel" layoutX="480.0" layoutY="120.0" text="Sex">
+                  <Label fx:id="sexLabel" layoutX="478.0" layoutY="114.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
                      <font>
                         <Font name="JasmineUPC" size="32.0" />
                      </font>
                   </Label>
-                  <Label layoutX="42.0" layoutY="242.0" text="Address" textFill="#a05e07">
+                  <Label layoutX="42.0" layoutY="242.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Address" textFill="#a05e07">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
                   <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="180.0" layoutY="279.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
-                  <Button layoutX="279.0" layoutY="299.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: F99F28;" text="เพิ่มข้อมูลที่อยู่" textFill="WHITE">
+                  <Button layoutX="279.0" layoutY="299.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มข้อมูลที่อยู่" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Label layoutX="44.0" layoutY="371.0" text="My voucher" textFill="#a05e07">
+                  <Label layoutX="44.0" layoutY="371.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="My voucher" textFill="#a05e07">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
