--- a/src/main/resources/ku/cs/confirmation.fxml
+++ b/src/main/resources/ku/cs/confirmation.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="420.0" style="-fx-background-radius: 30; -fx-background-color: FFF1DE;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="96.0" layoutY="30.0" text="ยืนยันการสมัคร" textFill="#734304">
@@ -14,22 +13,22 @@
             <Font name="JasmineUPC" size="48.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="90.0" text="Username" textFill="#734304">
+      <Label layoutX="42.0" layoutY="86.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="#734304">
          <font>
             <Font name="JasmineUPC" size="36.0" />
          </font>
       </Label>
-      <TextField layoutX="55.0" layoutY="130.0" prefHeight="50.0" prefWidth="322.0" promptText="Your username" style="-fx-background-color: FFFCF1; -fx-background-radius: 20; -fx-effect: shadow;">
+      <TextField layoutX="55.0" layoutY="130.0" prefHeight="50.0" prefWidth="322.0" promptText="Your username" style="-fx-background-color: FFFCF1; -fx-background-radius: 20; -fx-effect: shadow;" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </TextField>
-      <Label layoutX="50.0" layoutY="200.0" text="Password" textFill="#734304">
+      <Label layoutX="42.0" layoutY="200.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password" textFill="#734304">
          <font>
             <Font name="JasmineUPC" size="36.0" />
          </font>
       </Label>
-      <TextField layoutX="55.0" layoutY="240.0" prefHeight="50.0" prefWidth="322.0" promptText="Your username" style="-fx-background-color: FFFCF1; -fx-background-radius: 20; -fx-effect: shadow;">
+      <TextField layoutX="55.0" layoutY="240.0" prefHeight="50.0" prefWidth="322.0" promptText="Your username" style="-fx-background-color: FFFCF1; -fx-background-radius: 20; -fx-effect: shadow;" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
