--- a/src/main/resources/ku/cs/confirmationStock.fxml
+++ b/src/main/resources/ku/cs/confirmationStock.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="420.0" style="-fx-background-radius: 30; -fx-background-color: FFF1DE;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="96.0" layoutY="30.0" text="ยืนยันการสมัคร" textFill="#734304">
@@ -24,7 +23,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </TextField>
-      <Label layoutX="50.0" layoutY="165.0" text="Password" textFill="#734304">
+      <Label layoutX="48.0" layoutY="164.0" styleClass="font_rsu" stylesheets="@style/PrimaryTheme.css" text="Password" textFill="#734304">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
