--- a/src/main/resources/ku/cs/pageBookCartoon.fxml
+++ b/src/main/resources/ku/cs/pageBookCartoon.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="315.0" layoutX="71.0" layoutY="113.0" stroke="#eccece" strokeType="OUTSIDE" width="260.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fffcf1" height="315.0" layoutX="354.0" layoutY="113.0" stroke="#eccece" strokeType="OUTSIDE" width="260.0" />
@@ -133,7 +133,7 @@
          </image>
       </ImageView>
       <Button layoutX="521.0" layoutY="24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="143.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" />
-      <Label fx:id="userName" layoutX="535.0" layoutY="27.0" styleClass="root" stylesheets="@style/PrimaryTheme.css" text="username" textFill="WHITE">
+      <Label fx:id="userName" layoutX="541.0" layoutY="31.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="username" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="38.0" />
          </font>
