--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -8,8 +8,8 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegisterController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" />
-      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#fcfcfc" height="615.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="378.0" AnchorPane.bottomAnchor="98.0" AnchorPane.leftAnchor="324.0" AnchorPane.topAnchor="55.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#fcfcfc" height="625.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="378.0" AnchorPane.leftAnchor="324.0" AnchorPane.topAnchor="55.0" />
       <ImageView fitHeight="87.0" fitWidth="90.0" layoutX="465.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/Icon01.png" />
@@ -112,8 +112,8 @@
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="birthYearChoice" layoutX="438.0" layoutY="484.0" prefHeight="28.0" prefWidth="90.0" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" AnchorPane.leftAnchor="348.0" AnchorPane.topAnchor="484.0" />
-      <ChoiceBox fx:id="birthMonthChoice" layoutX="454.0" layoutY="484.0" prefHeight="28.0" prefWidth="125.0" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" AnchorPane.leftAnchor="454.0" AnchorPane.topAnchor="484.0" />
-      <ChoiceBox fx:id="birthDayChoice" layoutX="478.0" layoutY="509.0" prefHeight="28.0" prefWidth="77.0" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" AnchorPane.rightAnchor="351.0" AnchorPane.topAnchor="484.0" />
+      <ComboBox fx:id="birthYearChoice" layoutX="348.0" layoutY="484.0" onAction="#setMonthChoice" prefHeight="28.0" prefWidth="90.0" promptText="ปี ( ค.ศ. )" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
+      <ComboBox fx:id="birthMonthChoice" layoutX="454.0" layoutY="484.0" onAction="#setDayChoice" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
+      <ComboBox fx:id="birthDayChoice" layoutY="484.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" AnchorPane.rightAnchor="351.0" />
    </children>
 </AnchorPane>
