--- a/src/main/resources/ku/cs/information.fxml
+++ b/src/main/resources/ku/cs/information.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,78 +13,92 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" styleClass="font_rsu" stylesheets="@style/PrimaryTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.InformationController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.InformationController">
    <children>
       <HBox layoutX="65.0" layoutY="236.0" prefHeight="250.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="700.0" style="-fx-background-radius: 10;" styleClass="backgroundColor1" stylesheets="@style.css">
+            <AnchorPane prefHeight="200.0" prefWidth="700.0" style="-fx-background-radius: 10;" styleClass="backgroundColor1" stylesheets="@style/style.css">
                <children>
-                  <Button layoutX="601.0" layoutY="155.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" text="บันทึก" textFill="WHITE">
+                  <Button layoutX="601.0" layoutY="158.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="24.0" />
                      </font>
                   </Button>
-                  <TextField layoutX="163.0" layoutY="146.0" prefHeight="31.0" prefWidth="144.0" promptText="Lastname" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
+                  <TextField layoutX="163.0" layoutY="151.0" prefHeight="31.0" prefWidth="144.0" promptText="Lastname" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@style/style.css" />
+                        <URL value="@style/PrimaryTheme.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="backgroundColor2" />
+                        <String fx:value="font_rsu_12pt" />
+                     </styleClass>
                   </TextField>
-                  <TextField layoutX="163.0" layoutY="106.0" prefHeight="31.0" prefWidth="144.0" promptText="Firstname" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
+                  <TextField layoutX="163.0" layoutY="107.0" prefHeight="31.0" prefWidth="144.0" promptText="Firstname" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@style/style.css" />
+                        <URL value="@style/PrimaryTheme.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="backgroundColor2" />
+                        <String fx:value="font_rsu_12pt" />
+                     </styleClass>
                   </TextField>
-                  <TextField layoutX="163.0" layoutY="26.0" prefHeight="31.0" prefWidth="144.0" promptText="username" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
+                  <TextField layoutX="446.0" layoutY="62.0" prefHeight="31.0" prefWidth="144.0" promptText="หมายเลขโทรศัพท์" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@style/style.css" />
+                        <URL value="@style/PrimaryTheme.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="backgroundColor2" />
+                        <String fx:value="font_rsu_12pt" />
+                     </styleClass>
                   </TextField>
-                  <TextField layoutX="446.0" layoutY="26.0" prefHeight="27.0" prefWidth="48.0" promptText="วัน" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
-                     <font>
-                        <Font name="JasmineUPC" size="20.0" />
-                     </font>
-                  </TextField>
-                  <TextField layoutX="446.0" layoutY="66.0" prefHeight="31.0" prefWidth="144.0" promptText="หมายเลขโทรศัพท์" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
-                     <font>
-                        <Font name="JasmineUPC" size="20.0" />
-                     </font>
-                  </TextField>
-                  <Label layoutX="40.0" layoutY="25.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
-                     <font>
-                        <Font name="JasmineUPC" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="343.0" layoutY="27.0" styleClass="font_rsu_18pt" text="Birthday">
+                  <Label layoutX="42.0" layoutY="22.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="39.0" layoutY="65.0" styleClass="font_rsu" text="Password">
+                  <Label layoutX="343.0" layoutY="22.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="37.0" layoutY="105.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
+                  <Label layoutX="42.0" layoutY="64.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="38.0" layoutY="144.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
+                  <Label layoutX="42.0" layoutY="108.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="343.0" layoutY="68.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
+                  <Label layoutX="42.0" layoutY="153.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="344.0" layoutY="108.0" styleClass="font_rsu_18pt" text="Sex">
+                  <Label layoutX="343.0" layoutY="64.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Label>
-                  <MenuButton layoutX="463.0" layoutY="106.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" style="-fx-background-radius: 5; -fx-border-radius: 5;" stylesheets="@style.css" text="เพศ">
+                  <Label layoutX="344.0" layoutY="108.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
+                     <font>
+                        <Font name="JasmineUPC" size="36.0" />
+                     </font>
+                  </Label>
+                  <MenuButton layoutX="463.0" layoutY="107.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" style="-fx-background-radius: 5; -fx-border-radius: 5;" text="เพศ">
                     <items>
                       <MenuItem mnemonicParsing="false" text="หญิง" />
                       <MenuItem mnemonicParsing="false" text="ชาย" />
@@ -95,37 +110,46 @@
                      <styleClass>
                         <String fx:value="backgroundColor2" />
                         <String fx:value="borderColor" />
+                        <String fx:value="font_rsu_12pt" />
                      </styleClass>
+                     <stylesheets>
+                        <URL value="@style/style.css" />
+                        <URL value="@style/PrimaryTheme.css" />
+                     </stylesheets>
                   </MenuButton>
-                  <PasswordField layoutX="163.0" layoutY="67.0" prefHeight="31.0" prefWidth="144.0" promptText="password" style="-fx-background-radius: 5; -fx-border-color: #1d3557; -fx-border-radius: 5;" styleClass="backgroundColor2" stylesheets="@style.css">
+                  <PasswordField layoutX="163.0" layoutY="62.0" prefHeight="32.0" prefWidth="144.0" promptText="password" style="-fx-background-radius: 5; -fx-border-color: #1d3557; -fx-border-radius: 5;">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
+                     <stylesheets>
+                        <URL value="@style/style.css" />
+                        <URL value="@style/PrimaryTheme.css" />
+                     </stylesheets>
+                     <styleClass>
+                        <String fx:value="backgroundColor2" />
+                        <String fx:value="font_rsu_12pt" />
+                     </styleClass>
                   </PasswordField>
-                  <TextField layoutX="604.0" layoutY="26.0" prefHeight="27.0" prefWidth="82.0" promptText="ปี พ.ศ." style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css">
+                  <Label fx:id="birthdayLabel" layoutX="451.0" layoutY="30.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
                      <font>
-                        <Font name="JasmineUPC" size="20.0" />
+                        <Font name="JasmineUPC" size="25.0" />
                      </font>
-                  </TextField>
-                  <MenuButton layoutX="498.0" layoutY="26.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="102.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1d3557;" styleClass="backgroundColor2" stylesheets="@style.css" text="เดือน">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="มกราคม" />
-                        <MenuItem mnemonicParsing="false" text="กุมภาพันธ์" />
-                        <MenuItem mnemonicParsing="false" text="มีนาคม" />
-                        <MenuItem mnemonicParsing="false" text="เมษายน" />
-                        <MenuItem mnemonicParsing="false" text="พฤษภาคม" />
-                        <MenuItem mnemonicParsing="false" text="มิถุนายน" />
-                        <MenuItem mnemonicParsing="false" text="กรกฎาคม" />
-                        <MenuItem mnemonicParsing="false" text="สิงหาคม" />
-                        <MenuItem mnemonicParsing="false" text="กันยายน" />
-                        <MenuItem mnemonicParsing="false" text="ตุลาคม" />
-                        <MenuItem mnemonicParsing="false" text="พฤศจิกายน" />
-                        <MenuItem mnemonicParsing="false" text="ธันวาคม" />
-                     </items>
+                  </Label>
+                  <Label fx:id="birthMonthLabel" layoutX="513.0" layoutY="30.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
                      <font>
-                        <Font name="JasmineUPC" size="20.0" />
+                        <Font name="JasmineUPC" size="25.0" />
                      </font>
-                  </MenuButton>
+                  </Label>
+                  <Label fx:id="birthYearLabel" layoutX="595.0" layoutY="30.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="usernameLabel" layoutX="174.0" layoutY="29.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
                </children>
                <HBox.margin>
                   <Insets bottom="25.0" left="165.0" top="20.0" />
