--- a/src/main/resources/ku/cs/item.fxml
+++ b/src/main/resources/ku/cs/item.fxml
@@ -67,31 +67,11 @@
                      <HBox.margin>
                         <Insets bottom="3.0" left="35.0" />
                      </HBox.margin>
+                     <padding>
+                        <Insets left="1.0" />
+                     </padding>
                   </Label>
                </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="24.0" prefWidth="200.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ร้านค้า">
-                     <font>
-                        <Font name="JasmineUPC" size="19.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Text>
-                  <Label fx:id="bookShopLabel" text="bookShopLabel">
-                     <font>
-                        <Font name="JasmineUPC" size="19.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets bottom="3.0" left="25.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="200.0">
                <children>
