--- a/src/main/resources/ku/cs/item.fxml
+++ b/src/main/resources/ku/cs/item.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="305.0" prefWidth="200.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ItemController">
+<AnchorPane prefHeight="305.0" prefWidth="200.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ItemController">
    <children>
       <VBox prefHeight="305.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
