--- a/src/main/resources/ku/cs/aboutUs.fxml
+++ b/src/main/resources/ku/cs/aboutUs.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: C9AD88;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.sence.AboutUsController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: C9AD88;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffffffcb" height="728.0" strokeType="INSIDE" width="994.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0" />
       <Line endX="827.9595336914062" endY="-7.62939453125E-6" layoutX="144.0" layoutY="65.0" startX="-100.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
